@@ -21,15 +21,10 @@ define('APPLICATION_PATH', BASE_PATH . "/application");
 define('LIBRARY_PATH', BASE_PATH . "/library");
 
 set_include_path (LIBRARY_PATH . PATH_SEPARATOR . get_include_path());
-##set_include_path (get_include_path() . PATH_SEPARATOR . LIBRARY_PATH);
 
-
-/* REGISTRY */
 
 $registry = B_Registry::singleton();
 $registry->load(BASE_PATH . '/config/environment.xml');
-
-/* BASE */
 
 $registry->request->object = null;
 $registry->response->object = null;
@@ -45,21 +40,4 @@ $registry->response->headers = array
     )
 );
 
-$registry->session->name = 'blotomate';
-$registry->session->expiration = 43200;
 $registry->session->unauthorized->redirect = BASE_URL;
-
-$registry->translation->culture = 'us_EN';
-
-/* APPLICATION */
-
-/* mailer */
-
-/* http client */
-
-$registry->application->httpClient->maxHeaders = 30;
-$registry->application->httpClient->maxBodyLenght = 5242880; // 5242880 bytes = 5Mb
-
-/* python */
-
-$registry->python->interpreter->path = "/usr/local/bin/python";
