@@ -1,4 +1,6 @@
 Options -Indexes
+ErrorDocument 404 /404.html
+ErrorDocument 500 /500.html
 
 <IfModule mod_rewrite.c>
     RewriteEngine On
