@@ -112,7 +112,7 @@ HORAS TRABALHADAS: 2h
 27/03/2009
 ==========
 
-- Implementação de webservice para cadastro de feeds (e backend)
+- Implementação de webservice para cadastro de feeds
 
 HORAS TRABALHADAS: 8h
 
@@ -120,6 +120,14 @@ HORAS TRABALHADAS: 8h
 28/03/2009
 ==========
 
-- Implementação de webservice para cadastro de feeds (e backend)
+- Implementação de webservice para cadastro de feeds
 
 HORAS TRABALHADAS: 7h
+
+==========
+29/03/2009
+==========
+
+- Implementação de webservice para cadastro de feeds
+
+HORAS TRABALHADAS: 6h
